--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
         const password = document.getElementById('password').value;
         
         // Simple hardcoded credentials (replace with proper auth in production)
-        if (username === 'inspire' && password === 'teamhq2025') {
+        if (username === 'admin' && password === 'teaminspire2025') {
           localStorage.setItem('isLoggedIn', 'true');
           localStorage.setItem('lastLogin', new Date().toISOString());
           window.location.href = 'index.html';
