--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>INSPIRE HQ Calendar</title>
   
   <!-- Fallback to local copies if CDN fails -->
@@ -14,8 +17,6 @@
   <!-- App manifest for PWA capabilities -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#00ffcc">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="inspire.png">
 </head>
 <body>
