--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -114,7 +115,7 @@
         const password = document.getElementById('password').value;
         
         // Simple hardcoded credentials (replace with proper auth in production)
-        if (username === 'admin' && password === 'teaminspire2025') {
+        if (username === 'inspire' && password === 'teamhq2025') {
           localStorage.setItem('isLoggedIn', 'true');
           localStorage.setItem('lastLogin', new Date().toISOString());
           window.location.href = 'index.html';
